--- a/public/main.css
+++ b/public/main.css
@@ -31,9 +31,9 @@ html, body{
     width: 50%;
 }
 #miAvatar{
-    height: 6em;
-    border-radius: 3em;
-    padding: 1%;
+    height: 70%;
+    border-radius: 35%;
+    padding: 0%;
 }
 #miSala{
     float: right;
@@ -56,6 +56,7 @@ html, body{
 h1{
     display: inline-block;
     margin-right: 5%;
+    margin-top: 0;
 }
 #condiciones{
     position:absolute;
@@ -75,10 +76,20 @@ h1{
     text-align: center;
     padding-top: 7%;
 }
+.login label{
+    display: inline-block;
+}
+#estadoUsuario{
+    margin-left: 12.7%
+}
 .login img{
     
     height: 4em;
-    border-radius: 2.5em;
+    border-radius: 2em;
+}
+.login img.imgPerfil{
+    height: 3em;
+    border-radius: 1.5em;
 }
 #imgSeleccionada{
     margin-top: 8%; 
@@ -90,11 +101,11 @@ h1{
     margin-top:11%;
 }
 #nickUsuario{
-    margin-right: 5%
+    margin-right: 3%
 }
 .contieneImagenes{
     position: absolute;
-    margin-left:15%;
+    margin-left:13%;
     margin-top:1%;
 }
 
@@ -191,16 +202,29 @@ h1{
     width: 10%;
     height: 86%;
 }
-
+#listaSalas{
+    padding: 0;
+}
+.badge{
+    background-color: #009688;
+    float: right;
+    margin-top: -2.5em;
+    margin-right: 22%;
+}
 #listaSalas li{
-    width: 100%;
+    width: 80%;
     height: 2.5em;
     list-style: none;
-    border: solid 1px grey;
+    border-bottom: solid 1px grey;
     margin:0px;
     margin-top:1%;
     padding:0px;
 }
+#listaSalas li:hover{
+    background-color: #E9EBEB;
+    
+}
+
 #listaUsuarios li{
     width: 100%;
     height: 4em;
@@ -211,6 +235,7 @@ h1{
     padding:0px;
     font-size:110%;
 }
+
 #listaUsuarios li:hover{
     background-color: #E9EBEB;
 }
@@ -240,8 +265,18 @@ h1{
     margin-left:5em;
 }
 
-
-
+@media screen and (min-width: 1700px){
+    h1{
+    margin-top: 3%;
+}
+    
+    #estadoUsuario{
+        margin-left: 8%
+    }
+    .contieneImagenes{
+    margin-left:15%;
+}
+}
 
 
 
